Make sure to run against a new version of specflat that includes badpixel mask and pixbias for r2 holiday 2013 problems (56649)  MDO

SJB 2014-01-22:
READPLUGMAP, PLATEMERGE : Added hooks to propagate eboss_target0 flags from
    plateHoles files.  Includes code in platemerge to override plugmap in
    spPlate -- this should be removed for the DR12 tag.

COMBSMALLCOLLIMATE: Updated offsets from data on 56528 for the record (offsets 
	are now stored in Hartmann.__init__(),specifically the "fudge"
	 dictionary that is defined at line 100. 
	https://trac.sdss3.org/browser/repo/ops/actors/sopActor/trunk/python
	/sopActor/utils/boss_collimate.py   (MDO)

PLUGHISTORY: Report for cart #18, and don't crash when trying to read
    data for MANGA data (ie, plate 6655 on cart 1)
READPLUGMAP: Fix typo in #906 PSF/fiber2flux corrections (CPL)
SPECTRO_SUMMARY: Merged with version in boss/papers/OneDee.  Added entries
    from DR9 publications which weren't calculated here. (SJB)
SPFLUX_V5: Wrote new SPFLUX_BALMERFIX routine to address ticket #1958
    in simplest possible manner.  Called on line 1054 of main routine.
    Comment that out to restore previous behavior. (ASB, 2014-Jan-17)

-------------------------------------------------------------------------------
v5_6_5 (2013-06-24) ASB
Candidate tag for DR11 galaxy LSS analysis
Built against:
  elodie/v1_3
  specflat/v1_20
  idlutils/v5_5_10

BOLTON_BIASSUB, SDSSPROC: New code to deal with r2 power-supply bias
    instability over MJD range [56352, 56371] (Ticket #1759).
COMBSMALLCOLLIMATE: Change offsets because focus ring changes on 56434 (MDO)
PLATELIST: exclude LITTLE_COVERAGE, UNPLUGGED, and BAD_TARGET fibers from
    statistics for platelist.  Ticket #1727.
SPREDUCE1D: Add ability to override default redshift-fitting range for
    galaxy templates by using a file $SPECLOG_DIR/opfiles/spPlateZrange.par
    (ticket #1084).

templates/spEigenGal-56436.fits: Copy of galaxy templates pEigenGal-55740.fits